tests/toy/neg/001638_mutation.toylang
program a = { while a do sleep while; } .
